deploy: 05a91ea8114d5ee2715a7917e2f74d53d0d0ae89

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <h2><a href="/posts/dong-post-2/">pp</a></h2>
     <em>2021-04-01</em>
 
+    <h2><a href="/posts/lawr-post/">pp</a></h2>
+    <em>2021-04-01</em>
+
 
 
     </body>
