--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2><a href="/posts/dong-post-2/">pp</a></h2>
     <em>2021-04-01</em>
 
-    <h2><a href="/posts/lawr-post/">pp</a></h2>
+    <h2><a href="/posts/lawr-post/">lawrence is sexy</a></h2>
     <em>2021-04-01</em>
 
 
