--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My Blog bitch</title>
+        <title>IOWAGANG</title>
     </head>
     <body>
         <h1>Welcome to my blog</h1>
