--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: layout.liquid
-pageTitle: Welcome to my blog
+pageTitle: Welcome to our blog
 ---
 {% for post in collections.posts %}
     <h2><a href="{{ post.url }}">{{ post.data.pageTitle }}</a></h2>
