deploy: 4cc99e8ba1571ee32c0a16fcf9a2df9e61a81daf

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>IOWAGANG</title>
     </head>
     <body>
-        <h1>Welcome to my blog</h1>
+        <h1>Welcome to our blog</h1>
 
         
     <h2><a href="/posts/blog-post-2/">This is my other bitch title</a></h2>
