deploy: 5253b3fd22abc5c610f2aa31751da44a242d0a1f

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <h2><a href="/posts/lawr-post/">lawrence is sexy</a></h2>
     <em>2021-04-01</em>
 
+    <h2><a href="/posts/setting-up-website/">Setting up an Eleventy website using Github Pages</a></h2>
+    <em>2021-04-01</em>
+
 
 
     </body>
