--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
-layout: layout.liquid
+layout: layout.njk
 pageTitle: Welcome to our blog
 ---
 {% for post in collections.posts %}
     <h2><a href="{{ post.url }}">{{ post.data.pageTitle }}</a></h2>
     <em>{{ post.date | date: "%Y-%m-%d" }}</em>
 {% endfor %}
-
