deploy: 9939d4ee3af2d2b7b0a08ce1c967787296544793

--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>IOWAGANG</title>
     </head>
     <body>
         <h1>Welcome to our blog</h1>
 
         
-    &lt;h2&gt;&lt;a href=&quot;/posts/setting-up-website/&quot;&gt;Setting up an Eleventy website using Github Pages&lt;/a&gt;&lt;/h2&gt;
-    &lt;em&gt;2020-04-01&lt;/em&gt;
+    <h2><a href="/posts/setting-up-website/">Setting up an Eleventy website using Github Pages</a></h2>
+    <em>2020-04-01</em>
 
-    &lt;h2&gt;&lt;a href=&quot;/posts/blog-post-2/&quot;&gt;This is my other bitch title&lt;/a&gt;&lt;/h2&gt;
-    &lt;em&gt;2021-04-02&lt;/em&gt;
+    <h2><a href="/posts/blog-post-2/">This is my other bitch title</a></h2>
+    <em>2021-04-02</em>
 
-    &lt;h2&gt;&lt;a href=&quot;/posts/blog-post/&quot;&gt;This is my title bitch&lt;/a&gt;&lt;/h2&gt;
-    &lt;em&gt;2021-04-02&lt;/em&gt;
+    <h2><a href="/posts/blog-post/">This is my title bitch</a></h2>
+    <em>2021-04-02</em>
 
-    &lt;h2&gt;&lt;a href=&quot;/posts/dong-post-1/&quot;&gt;Dong&#39;s text blogbkajdbkdjvn&lt;/a&gt;&lt;/h2&gt;
-    &lt;em&gt;2021-04-02&lt;/em&gt;
+    <h2><a href="/posts/dong-post-1/">Dong's text blogbkajdbkdjvn</a></h2>
+    <em>2021-04-02</em>
 
-    &lt;h2&gt;&lt;a href=&quot;/posts/dong-post-2/&quot;&gt;pp&lt;/a&gt;&lt;/h2&gt;
-    &lt;em&gt;2021-04-02&lt;/em&gt;
+    <h2><a href="/posts/dong-post-2/">pp</a></h2>
+    <em>2021-04-02</em>
 
-    &lt;h2&gt;&lt;a href=&quot;/posts/lawr-post/&quot;&gt;lawrence is sexy&lt;/a&gt;&lt;/h2&gt;
-    &lt;em&gt;2021-04-02&lt;/em&gt;
+    <h2><a href="/posts/lawr-post/">lawrence is sexy</a></h2>
+    <em>2021-04-02</em>
 
 
     </body>
