deploy: 9f2701ce4708270f278328adaad3456ec1e4adc8

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <h2><a href="/posts/lawr-post/">lawrence is sexy</a></h2>
     <em>2020-04-02</em>
 
+    <h2><a href="/posts/outerbanks-vlog/">OBX 2021 VLOG</a></h2>
+    <em>2020-04-07</em>
+
 
     </body>
 </html>
